2017-08-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Extend testsuite to cover winsock fd_set macro operations.

	* tests/winsock.at: New file; it implements appropriate tests, and
	enables use of "-k winsock", "-k winsock2", and "-k fd_set" autotest
	keywords to invoke them, (e.g. make check TESTSUITEFLAGS='-k fd_set').

	* tests/testsuite.at.in (winsock.at): Integrate it.
	(MINGW_AT_CHECK_RUN): Accept a variant list of libraries when linking.
	(MINGW_AT_LINK_LIBS_DEFAULT): New macro; it establishes the initial
	default list of libraries, or resets the list to this initial default.
	(MINGW_AT_LINK_LIBS): New macro; it establishes an augmented list of
	library specifications, to be used until subsequently reset.

2017-07-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Prepare and tag for release of MinGW.org WSL-5.0.1

	* All files (wsl-5.0.1-release): Tag assigned.

2017-07-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Automate testsuite dependency generation.

	* tests/Makefile.in (testsuite) [$srcdir/*.at]: Automatically
	enumerate all such wildcard matches as prerequisites, instead of...
	(headers.at): ...this sole explicit dependency.

2017-06-20  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Make <winnt.h> header effectively self-contained.

	* include/winnt.h (_WINNT_H): Defer definition unless included via...
	(windef.h): ...this; include it, to enforce inclusion order, then...
	[_WINNT_H]: ...re-evaluate it, to avoid recursive inclusion loop.

2017-06-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Consolidate <winuser.h> version specific conditionals.

	* include/winuser.h: Reorganize file content; group manifest constant
	definitions into one nested collection of conditional blocks, with one
	block per Windows version evolution; do likewise for type definitions
	and function prototypes which are always exposed, and separately...