@@ -3916,10 +3916,6 @@ WINUSERAPI DWORD WINAPI GetListBoxInfo (HWND);
 WINUSERAPI BOOL WINAPI GetMenuBarInfo (HWND, LONG, LONG, PMENUBARINFO);
 WINUSERAPI BOOL WINAPI GetMenuInfo (HMENU, LPMENUINFO);
 
-#if _WIN32_WINDOWS >= _WIN32_WINDOWS_98
-WINUSERAPI BOOL WINAPI GetTitleBarInfo (HWND, PTITLEBARINFO);
-#endif
-
 WINUSERAPI BOOL WINAPI GetWindowInfo (HWND, PWINDOWINFO);
 WINUSERAPI BOOL WINAPI GetScrollBarInfo (HWND, LONG, PSCROLLBARINFO);
 
@@ -4416,6 +4412,7 @@ typedef struct tagTITLEBARINFO
   DWORD 			rgstate[CCHILDREN_TITLEBAR+1];
 } TITLEBARINFO, *PTITLEBARINFO, *LPTITLEBARINFO;
 
+WINUSERAPI BOOL WINAPI GetTitleBarInfo (HWND, PTITLEBARINFO);
 #endif	/* WINDOWS >= Win98 */
 
 WINUSERAPI BOOL WINAPI BlockInput(BOOL);
