@@ -1,3 +1,11 @@
+2017-08-28  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Resolve MinGW-Bug [#2350]
+
+	* include/winuser.h (GetTitleBarInfo): Move prototype after...
+	(PTITLEBARINFO): ...this type definition; it is used as a function
+	argument type, so must be defined beforehand.
+
 2017-08-21  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Extend testsuite to cover winsock fd_set macro operations.
